Adicionado novas imagens em assets

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a>About</a>
                 <a>Contact</a>
             </header>
-            <img src="./woman-cellphone.png" alt="woman-cellphone">
+            <img src="./assets/woman-cellphone.png" alt="woman-cellphone">
             <div></div>
         </section>
     </main>
